# linksdesempeno

./: .env.dev  .gitignore  README.md  README.rst  pyproject.toml
evaluaciondocentes/: manage.py
evaluaciondocentes/api_connection/: activate_survey.py  activate_survey_with_token.py  copy_survey.py  get_response_by_token.py  get_response_surveyid.py  list_surveys.py  response_token.py
evaluaciondocentes/api_connection/raw_scripts.py/: activate_survey_raw.py  copy_survey_raw.py
evaluaciondocentes/docentes/: admin.py  models.py  urls.py  views.py
evaluaciondocentes/docentes/migrations/: 0001_initial.py  0002_evaluador_id_survey.py  0003_evaluador_slug.py  0004_profesorevaluado_slug.py  0005_evaluador_instrumento_para_alumnos.py  0006_profesorevaluado_instrumento_para_alumnos.py  0007_auto_20211026_0109.py  0008_profesorevaluado_id_survey_evaluado.py  0009_evaluador_token_created.py  0010_evaluador_token.py  0011_remove_evaluador_token_created.py
evaluaciondocentes/evaluacionalumnos/: admin.py  apps.py  models.py  urls.py  views.py
evaluaciondocentes/evaluacionalumnosbachillerato/: admin.py  apps.py  models.py  urls.py  views.py
evaluaciondocentes/evaluaciondirectivos/: admin.py  apps.py  models.py  urls.py  views.py
evaluaciondocentes/evaluaciondirectivosbachillerato/: admin.py  apps.py  models.py  urls.py  views.py
evaluaciondocentes/evaluaciondirectivoskinder/: admin.py  apps.py  models.py  urls.py  views.py
evaluaciondocentes/evaluaciondocentes/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_maguen_desempeno.py
(+80 files in other folders)
