[tool.poetry]
name = "maguen-desempeno"
version = "0.1.0"
description = ""
authors = ["Ramiro Baltazar Vazquez Sanchez <ramirovazquez95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2.8"
requests = "^2.26.0"
qrcode = {extras = ["pil"], version = "^7.3.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
